improved javadoc for and checkstyle for BoardGame